// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render a button default 1`] = `
.c0 {
  font-family: Rubik,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  font-weight: bold;
  font-size: 16px;
  line-height: 16px;
  padding: 14px 100px;
  border-radius: 5px;
  cursor: pointer;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border: none;
  margin: 10px 0;
}

.c0:hover {
  box-shadow: 2px 2px 2px 1px rgba(0,0,0,0.2);
}

<button
  class="c0"
  data-testid="ButtonWrapper"
>
  <div
    class=""
  >
    <p>
      Salvar
    </p>
  </div>
</button>
`;

exports[`<Button /> should render a button with delete 1`] = `
.c0 {
  font-family: Rubik,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  font-weight: bold;
  font-size: 16px;
  line-height: 16px;
  padding: 14px 100px;
  border-radius: 5px;
  cursor: pointer;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border: none;
  margin: 10px 0;
  background-color: #d63649;
  color: #FAFAFA;
}

.c0:hover {
  box-shadow: 2px 2px 2px 1px rgba(0,0,0,0.2);
}

<button
  class="c0"
  data-testid="ButtonWrapper"
>
  <div
    class=""
  >
    <p>
      Salvar
    </p>
  </div>
</button>
`;

exports[`<Button /> should render a button with enter 1`] = `
.c0 {
  font-family: Rubik,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  font-weight: bold;
  font-size: 16px;
  line-height: 16px;
  padding: 14px 100px;
  border-radius: 5px;
  cursor: pointer;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border: none;
  margin: 10px 0;
  background-color: #030517;
  color: #FAFAFA;
}

.c0:hover {
  box-shadow: 2px 2px 2px 1px rgba(0,0,0,0.2);
}

<button
  class="c0"
  data-testid="ButtonWrapper"
>
  <div
    class=""
  >
    <p>
      Salvar
    </p>
  </div>
</button>
`;

exports[`<Button /> should render a button with save 1`] = `
.c0 {
  font-family: Rubik,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  font-weight: bold;
  font-size: 16px;
  line-height: 16px;
  padding: 14px 100px;
  border-radius: 5px;
  cursor: pointer;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border: none;
  margin: 10px 0;
  background-color: #FFD836;
  color: #FAFAFA;
}

.c0:hover {
  box-shadow: 2px 2px 2px 1px rgba(0,0,0,0.2);
}

<button
  class="c0"
  data-testid="ButtonWrapper"
>
  <div
    class=""
  >
    <p>
      Salvar
    </p>
  </div>
</button>
`;
